aplicacion_monitorizacion/monitorizacion/ingress/ingress-aplicacion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-aplicacion
  namespace: aplicacion
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aplicacion.local
      secretName: aplicacion-tls-secret
  rules:
    - host: aplicacion.local
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aplicacion-service
                port:
                  number: 80
